--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "framer-motion": "^12.2.0",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "pinata": "^1.10.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
+    "tailwindcss-animate": "^1.0.7",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
