--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.2.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.2.0",
     "next": "15.1.6",
     "pinata": "^1.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.5.1",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "web3": "^4.16.0"
   },
