--- a/package.json
+++ b/package.json
@@ -10,26 +10,34 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.2.0",
     "lucide-react": "^0.474.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.2.0",
     "next": "15.1.6",
     "pinata": "^1.10.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-type-animation": "^3.2.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
+    "three-globe": "^2.41.12",
     "web3": "^1.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
