--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.29.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.2.0",
     "lucide-react": "^0.474.0",
