--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.5",
     "framer-motion": "^12.2.0",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
