--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@react-three/fiber": "^8.17.14",
     "@tabler/icons-react": "^3.29.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "ethers": "^6.13.5",
     "framer-motion": "^12.2.0",
     "lucide-react": "^0.474.0",
@@ -29,6 +30,7 @@
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-top-loading-bar": "^3.0.2",
     "react-type-animation": "^3.2.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.1",
