--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "ethers": "^6.13.5",
+    "figlet": "^1.8.0",
     "framer-motion": "^12.2.0",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
