--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/react": "^2.6.14",
+    "@heroui/react": "^2.8.5",
     "@tabler/icons-react": "^3.29.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
@@ -22,10 +22,10 @@
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.2.0",
-    "next": "15.1.6",
+    "next": "^16.0.10",
     "pinata": "^1.10.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
